--- a/Mids.html
+++ b/Mids.html
@@ -114,3 +114,6 @@
 
   <strong> <a href="https://thesolesupplier.co.uk/release-dates/nike/air-jordan-1/jordan-1-mid-metallic-red/"> Buy Now</a></strong></p>
   <p><strong>PAGE 3</strong></p>
+        
+</body>
+</html>
