--- a/high.html
+++ b/high.html
@@ -154,7 +154,8 @@ The Hyeper Royals provide a beautiful washed denim look which are a perfect matc
         background-color:rgb(234, 239, 252);
     }
     
-
+</body>
+    </html>
 
 
 
