--- a/high.html
+++ b/high.html
@@ -79,7 +79,7 @@ The Hyeper Royals provide a beautiful washed denim look which are a perfect matc
 
 <strong> <a href="https://www.goat.com/sneakers/air-jordan-1-retro-high-midnight-navy-2020-dc1788-100"> Buy Now</a></strong></p>
 
- <a href="index/.html">BACK</a>
+ <a href="/index.html">BACK</a>
 
     
 </body>
