--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta charset="utf-8">
         <style>
         
-        
+            body {
+             background-color:rgba();
+    }
         #title {
             color:rgb(0, 0, 0);
             background-color:rgba(241, 214, 173, 0.938);
