--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <style>
         
             body {
-             background-color:rgb(1,1,1);
+             background-color:rgb(243, 234, 208);
     }
         #title {
             color:rgb(0, 0, 0);
